--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -32,6 +32,11 @@ h2 {
 h1,h2,h3,h4,h5,h6,td,tfoot,thead th, tfoot td {
   color: inherit;
 }
-.button {
-  background-color: black;
+
+.btn--primary {
+  @apply bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded
+}
+
+.btn--secondary {
+  @apply bg-transparent hover:bg-blue-400 text-blue-500 font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded
 }
